--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.6",
     "axios": "^0.21.0",
     "faker": "^5.1.0",
     "node-sass": "^4.14.1",
