--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ deploy:
   skip-cleanup: true
   # Directory where your generated files are located
   local_dir: build
+  # Github security/auth token
+  github-token: $GITHUB_TOKEN
   # Incremental commit to keep old build/files from previous deployments
   keep-history: true
   # Git branch on which it should deploy (master, gh-pages, foo...)
